@@ -1,4 +1,5 @@
 Development
+	Print Error on unable to launch gnome-mplayer
 	Increase URL buffer from 1K to 4K
 	Added pt_BR language
 	Set Copy Url eariler in the code, so that you can copy the url before 20% buffer
